--- a/public/register.html
+++ b/public/register.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        form {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 5px solid orange;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+input {
+    font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em 0;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
+
+button {
+    font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em 0;
+    border-radius: 5px;
+    background-color: orange;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+    </style>
 </head>
 <body>
     <h1>Register</h1>
