--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>julian one</title>
-    <style>
-        .logout-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            background-color: orange;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>hello 🌍</h1>
-
-    <button class="logout-button" onclick="logout()">Logout</button>
+    <form>
+        <button class="button login-button" onclick="login()">Login</button>
+        <button class="button logout-button" onclick="logout()">Logout</button>
+    </form>
 
     <script>
+        function login() {
+            // Here you can redirect to a login page or open a login modal
+            window.location.href = '/login'; // Assuming you have a login page at this route
+        }
+
         function logout() {
             window.location.href = '/logout';
         }
