--- a/public/error.html
+++ b/public/error.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Error!</h1>
   <form>
-    <p>We're sorry, but something went wrong.</p>
+    <p>Yikes! Something went wrong.</p>
     <p id="error-details"></p>
     <button type="button" class="button login-button" onclick="goHome()">Go Home</button>
   </form>
