--- a/public/register.html
+++ b/public/register.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <style>
-        /* Custom alert styles */
         .custom-alert {
             padding: 20px;
             background-color: #f44336;
-            /* Red */
             color: white;
             margin-bottom: 15px;
         }
 
-        /* The close button */
         .closebtn {
             margin-left: 15px;
             color: white;
@@ -28,7 +25,6 @@
             transition: 0.3s;
         }
 
-        /* When moving the mouse over the close button */
         .closebtn:hover {
             color: black;
         }
