--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="./css/styles.css">
 <link rel="stylesheet" href="datatables.css">
 </head>
 
@@ -25,7 +25,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- User rows will be inserted here by JavaScript -->
             </tbody>
         </table>
     </section>
@@ -45,7 +44,7 @@
                 ],
                 "language": {
                     "searchPlaceholder": "Search ...",
-                    "search": "" // This removes the 'search:' label text
+                    "search": ""
                 }
             });
         });
