fix: cleanup, validations (#3)

--- a/public/error.html
+++ b/public/error.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Error Page</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <h1>Error!</h1>
   <form>
-    <p>We're sorry, but something went wrong.</p>
+    <p>Yikes! Something went wrong.</p>
     <p id="error-details"></p>
     <button type="button" class="button login-button" onclick="goHome()">Go Home</button>
   </form>
