--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>julian one</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <h1 id="greeting">hello 🌍</h1>
     <form>
         <button type="button" id="login-btn" class="button login-button" onclick="login()">Login</button>
         <button type="button" id="logout-btn" class="button logout-button" onclick="logout()">Logout</button>
+        <button type="button" id="register-btn" class="button register-btn" onclick="register()">Register</button>
     </form>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             fetch('/login-status')
-                .then(response => response.json())
+                .then(response => { return response.json() })
                 .then(data => {
                     const greetingElement = document.getElementById('greeting');
                     if (data.isLoggedIn) {
@@ -45,6 +48,12 @@
                     }
                 });
         }
+
+        function register() {
+            window.location.href = '/register';
+        }
+
     </script>
 </body>
+
 </html>
