--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 <link rel="stylesheet" href="./css/styles.css">
-<link rel="stylesheet" href="datatables.css">
+<link rel="stylesheet" href="./css/datatables.css">
 </head>
 
 <body>
