--- a/public/register.html
+++ b/public/register.html
@@ -1,93 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
     <style>
-        .custom-alert {
-            padding: 20px;
-            background-color: #f44336;
-            color: white;
-            margin-bottom: 15px;
-        }
+      .custom-alert {
+        padding: 20px;
+        background-color: #f44336;
+        color: white;
+        margin-bottom: 15px;
+      }
 
-        .closebtn {
-            margin-left: 15px;
-            color: white;
-            font-weight: bold;
-            float: right;
-            font-size: 22px;
-            line-height: 20px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
 
-        .closebtn:hover {
-            color: black;
-        }
+      .closebtn:hover {
+        color: black;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Register</h1>
-    <div id="alert-placeholder" style="display: none;"></div>
+    <div id="alert-placeholder" style="display: none"></div>
     <form id="register-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Register</button>
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Register</button>
     </form>
     <script>
-        document.getElementById('register-form').onsubmit = async function (event) {
-            event.preventDefault();
-            const username = document.getElementById('username').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const alertPlaceholder = document.getElementById('alert-placeholder');
-            function showAlert(message) {
-                alertPlaceholder.innerHTML = `
+      document.getElementById('register-form').onsubmit = async function (
+        event,
+      ) {
+        event.preventDefault();
+        const username = document.getElementById('username').value;
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const alertPlaceholder = document.getElementById('alert-placeholder');
+        function showAlert(message) {
+          alertPlaceholder.innerHTML = `
                     <div class="custom-alert">
                     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
                     ${message}
                     </div>`;
-                alertPlaceholder.style.display = 'block';
-            }
+          alertPlaceholder.style.display = 'block';
+        }
 
-            if (!username || !email || !password) {
-                alert('Please fill in all fields');
-                return;
-            }
+        if (!username || !email || !password) {
+          alert('Please fill in all fields');
+          return;
+        }
 
-            try {
-                const response = await fetch('/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ username, email, password }),
-                });
+        try {
+          const response = await fetch('/register', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ username, email, password }),
+          });
 
-                if (response.ok) {
-                    showAlert('Registered successfully!');
-                    window.location.href = '/';
-                } else if (response.status === 400) {
-                    const message = await response.text();
-                    showAlert(`Registration failed: ${message.error}`);
-                } else if (response.status === 409) {
-                    showAlert(`Registration failed: User already exists: ${message.error}`);
-                } else {
-                    const message = await response.json();
-                    showAlert(`Registration failed: ${message.error}`);
-                }
-            } catch (error) {
-                console.error('Registration failed:', error);
-                showAlert('An error occurred during registration. Please try again later.');
-            }
-        };
+          if (response.ok) {
+            showAlert('Registered successfully!');
+            window.location.href = '/';
+          } else if (response.status === 400) {
+            const message = await response.text();
+            showAlert(`Registration failed: ${message.error}`);
+          } else if (response.status === 409) {
+            showAlert(
+              `Registration failed: User already exists: ${message.error}`,
+            );
+          } else {
+            const message = await response.json();
+            showAlert(`Registration failed: ${message.error}`);
+          }
+        } catch (error) {
+          console.error('Registration failed:', error);
+          showAlert(
+            'An error occurred during registration. Please try again later.',
+          );
+        }
+      };
     </script>
-</body>
-
+  </body>
 </html>
