--- a/public/admin.html
+++ b/public/admin.html
@@ -1,54 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard</title>
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-<link rel="stylesheet" href="./css/styles.css">
-<link rel="stylesheet" href="./css/datatables.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/datatables.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Admin</h1>
     <section id="userList">
-        <h2>Users</h2>
-        <table id="usersTable" class="cell-border row-border hover" style="width:100%">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Created On</th>
-                    <th>Last Login</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+      <h2>Users</h2>
+      <table
+        id="usersTable"
+        class="cell-border row-border hover"
+        style="width: 100%"
+      >
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Created On</th>
+            <th>Last Login</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </section>
     <script>
-        $(document).ready(function () {
-            const table = $('#usersTable').DataTable({
-                "ajax": {
-                    "url": "/users",
-                    "dataSrc": "",
-                },
-                "columns": [
-                    { "data": "id" },
-                    { "data": "username" },
-                    { "data": "email" },
-                    { "data": "createdOn" },
-                    { "data": "lastLogin" }
-                ],
-                "language": {
-                    "searchPlaceholder": "Search ...",
-                    "search": ""
-                }
-            });
+      $(document).ready(function () {
+        const table = $('#usersTable').DataTable({
+          ajax: {
+            url: '/users',
+            dataSrc: '',
+          },
+          columns: [
+            { data: 'id' },
+            { data: 'username' },
+            { data: 'email' },
+            { data: 'createdOn' },
+            { data: 'lastLogin' },
+          ],
+          language: {
+            searchPlaceholder: 'Search ...',
+            search: '',
+          },
         });
+      });
     </script>
-</body>
-
+  </body>
 </html>
