--- a/public/error.html
+++ b/public/error.html
@@ -1,32 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Error Page</title>
-<link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-  <h1>Error!</h1>
-  <form>
-    <p>Yikes! Something went wrong.</p>
-    <p id="error-details"></p>
-    <button type="button" class="button login-button" onclick="goHome()">Go Home</button>
-  </form>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const params = new URLSearchParams(window.location.search);
-      const status = params.get('status');
-      const message = params.get('message');
-      
-      const errorDetailsElement = document.getElementById('error-details');
-      errorDetailsElement.textContent = `Error ${status}: ${message}`;
-    });
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Error Page</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <h1>Error!</h1>
+    <form>
+      <p>Yikes! Something went wrong.</p>
+      <p id="error-details"></p>
+      <button type="button" class="button login-button" onclick="goHome()">
+        Go Home
+      </button>
+    </form>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const params = new URLSearchParams(window.location.search);
+        const status = params.get('status');
+        const message = params.get('message');
 
+        const errorDetailsElement = document.getElementById('error-details');
+        errorDetailsElement.textContent = `Error ${status}: ${message}`;
+      });
 
-    function goHome() {
-            window.location.href = '/';
-        }
-  </script>
-</body>
+      function goHome() {
+        window.location.href = '/';
+      }
+    </script>
+  </body>
 </html>
