--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>julian one</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <h1 id="greeting">hello 🌍</h1>
     <form>
-        <button type="button" id="login-btn" class="button login-button" onclick="login()">Login</button>
-        <button type="button" id="logout-btn" class="button logout-button" onclick="logout()">Logout</button>
-        <button type="button" id="register-btn" class="button register-btn" onclick="register()">Register</button>
+      <button
+        type="button"
+        id="login-btn"
+        class="button login-button"
+        onclick="login()"
+      >
+        Login
+      </button>
+      <button
+        type="button"
+        id="logout-btn"
+        class="button logout-button"
+        onclick="logout()"
+      >
+        Logout
+      </button>
+      <button
+        type="button"
+        id="register-btn"
+        class="button register-btn"
+        onclick="register()"
+      >
+        Register
+      </button>
     </form>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            fetch('/login-status')
-                .then(response => { return response.json() })
-                .then(data => {
-                    const greetingElement = document.getElementById('greeting');
-                    if (data.isLoggedIn) {
-                        greetingElement.textContent = `hello ${data.username}`;
-                        document.getElementById('login-btn').style.display = 'none';
-                        document.getElementById('logout-btn').style.display = 'block';
-                    } else {
-                        greetingElement.textContent = 'hello 🌍';
-                        document.getElementById('login-btn').style.display = 'block';
-                        document.getElementById('logout-btn').style.display = 'none';
-                    }
-                });
+      document.addEventListener('DOMContentLoaded', function () {
+        fetch('/login-status')
+          .then((response) => {
+            return response.json();
+          })
+          .then((data) => {
+            const greetingElement = document.getElementById('greeting');
+            if (data.isLoggedIn) {
+              greetingElement.textContent = `hello ${data.username}`;
+              document.getElementById('login-btn').style.display = 'none';
+              document.getElementById('logout-btn').style.display = 'block';
+            } else {
+              greetingElement.textContent = 'hello 🌍';
+              document.getElementById('login-btn').style.display = 'block';
+              document.getElementById('logout-btn').style.display = 'none';
+            }
+          });
+      });
+
+      function login() {
+        window.location.href = '/login';
+      }
+
+      function logout() {
+        fetch('/logout', { method: 'GET' }).then((response) => {
+          if (response.ok) {
+            window.location.href = '/';
+          } else {
+            console.error('Logout failed');
+          }
         });
+      }
 
-        function login() {
-            window.location.href = '/login';
-        }
-
-        function logout() {
-            fetch('/logout', { method: 'GET' })
-                .then(response => {
-                    if (response.ok) {
-                        window.location.href = '/';
-                    } else {
-                        console.error('Logout failed');
-                    }
-                });
-        }
-
-        function register() {
-            window.location.href = '/register';
-        }
-
+      function register() {
+        window.location.href = '/register';
+      }
     </script>
-</body>
-
+  </body>
 </html>
