--- a/public/login.html
+++ b/public/login.html
@@ -1,47 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Login</h1>
     <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Login</button>
     </form>
     <script>
-        document.getElementById('login-form').onsubmit = async function (event) {
-            event.preventDefault();
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+      document.getElementById('login-form').onsubmit = async function (event) {
+        event.preventDefault();
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
 
-            if (!username || !password) {
-                alert('Please fill in all fields');
-                return;
-            }
+        if (!username || !password) {
+          alert('Please fill in all fields');
+          return;
+        }
 
-            const response = await fetch('/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password }),
-            });
+        const response = await fetch('/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ username, password }),
+        });
 
-            if (response.ok) {
-                alert('Logged in successfully!');
-                window.location.href = '/';
-            } else {
-                alert('Failed to login. ' + (await response.text()));
-            }
-        };
+        if (response.ok) {
+          alert('Logged in successfully!');
+          window.location.href = '/';
+        } else {
+          alert('Failed to login. ' + (await response.text()));
+        }
+      };
     </script>
-</body>
-
+  </body>
 </html>
